Modificado el index

--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
                         </div>
                     </div>
 
-                    <!-- Propuesta 6: ECONOMÍA SOLIDARIA -->
+                    <!-- Propuesta 6: SALUD DIGNA Y DIRECTA (REEMPLAZA A ECONOMÍA SOLIDARIA) -->
                     <div class="carousel-slide-item">
                         <div class="proposal-slide-content">
-                            <span class="text-5xl mb-2" role="img" aria-label="Economía Solidaria">🤝</span>
-                            <h3>Economía Solidaria</h3>
-                            <p class="text-lg font-semibold mb-2">Fomentar una economía incluyente, colaborativa y con oportunidades.</p>
-                            <p class="text-sm">Apoyo al Emprendimiento Local y Capacitación para el crecimiento de proyectos.</p>
+                            <span class="text-5xl mb-2" role="img" aria-label="Salud Digna">🏥</span>
+                            <h3>Salud Digna y Directa</h3>
+                            <p class="text-lg font-semibold mb-2">Atención inmediata sin intermediarios ni barreras burocráticas.</p>
+                            <p class="text-sm">Eliminación de la intermediación (EPS) y garantía de medicamentos sin tutelas.</p>
                         </div>
                     </div>
 
@@ -492,13 +492,15 @@
                     </ul>
                 </div>
 
-                <!-- 6. ECONOMÍA SOLIDARIA -->
+                <!-- 6. SALUD DIGNA Y DIRECTA (Reemplaza a Economía Solidaria) -->
                 <div class="p-6 border-2 border-gray-200 rounded-xl hover:shadow-lg transition duration-300">
-                    <h3 class="text-2xl font-bold proposal-card-title mb-3">Economía Solidaria</h3>
-                    <p class="text-gray-600 mb-4">Fomentar una economía incluyente, colaborativa y con oportunidades.</p>
+                    <h3 class="text-2xl font-bold proposal-card-title mb-3">Salud Digna y Directa</h3>
+                    <p class="text-gray-600 mb-4">Garantizar la atención inmediata sin barreras ni intermediarios que pongan en riesgo la vida.</p>
                     <ul class="list-disc ml-5 space-y-2 text-gray-700">
-                        <li><strong>Emprendimiento Local:</strong> Impulsar programas de apoyo a negocios sostenibles liderados por jóvenes y familias.</li>
-                        <li><strong>Capacitación:</strong> Brindar acceso a recursos y acompañamiento técnico para el crecimiento de proyectos.</li>
+                        <!-- FRASE MODIFICADA: Eliminado "y pacientes" -->
+                        <li><strong>Eliminación de la Intermediación (No más EPS):</strong> Reforma para una atención de salud directa, donde los recursos lleguen a los hospitales, no a intermediarios.</li>
+                        <!-- TEXTO MODIFICADO: Se elimina "sin trámites legales" para evitar connotaciones negativas. -->
+                        <li><strong>Medicamentos Sin Tutelas:</strong> Sé por experiencia propia lo que es luchar por una medicina vital. Garantizaremos la entrega oportuna de medicamentos.</li>
                     </ul>
                 </div>
 
@@ -929,4 +931,4 @@
         window.addEventListener('resize', initializeCarouselJS);
     </script>
 </body>
-    </html>
+</html>
